# B616Calculator

./: .gitignore  B616.py  LICENSE  README.md  b616.py  cache_handler.py  get_cover_url.py  get_song_img_link.py  main.py  pyproject.toml  request_handler.py  requirements.txt
.github/workflows/: build-all-platforms.yml
outputs/: cover_urls.json
src/: main.py
src/b616_calculator/: main.py
src/b616_calculator/utilities/: get_cover_url.py  request_handler.py
src/utilities/: get_cover_url.py  request_handler.py
static/: songlist.json
