[project]
name = "b616-calculator"  # Required
version = "0.0.1"  # Required

description = "Yet another Arcaea B30 calculator"

readme = "README.md"

requires-python = ">=3.9"

license = {file = "LICENSE.txt"}

# authors = [
#   {name = "FV1932", email = "unknown@example.com" }
# ]

# This should be your name or the names of the organization who currently
# maintains the project, and a valid email address corresponding to the name
# listed.
# maintainers = [
#   {name = "A. Great Maintainer", email = "maintainer@example.com" }
# ]

# This is configuration specific to the `setuptools` build backend.
# If you are using a different build backend, you will need to change this.
[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
package-data = {"sample" = ["*.dat"]}

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
