[project]
name = "b616-calculator"
version = "0.0.1"

description = "Yet another Arcaea B30 calculator"

readme = "README.md"

requires-python = ">=3.9"

license = {file = "LICENSE"}

# authors = [
#   {name = "FV1932", email = "unknown@example.com" }
# ]

# This should be your name or the names of the organization who currently
# maintains the project, and a valid email address corresponding to the name
# listed.
# maintainers = [
#   {name = "A. Great Maintainer", email = "maintainer@example.com" }
# ]

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
